@@ -4423,7 +4423,7 @@ static void build_selector_switches (selector *sr)
 #endif
     } else if (sr->ci == GARCH) {
 	tmp = gtk_check_button_new_with_label(_("Standardize the residuals"));
-	pack_switch(tmp, sr, (model_opt & OPT_E), FALSE, OPT_E, 0);
+	pack_switch(tmp, sr, (model_opt & OPT_Z), FALSE, OPT_Z, 0);
 	tmp = gtk_check_button_new_with_label(_("Use Fiorentini et al algorithm"));
 	pack_switch(tmp, sr, libset_get_bool(USE_FCP), FALSE, OPT_F, 0);
     } else if (sr->ci == MPOLS) {
