@@ -147,12 +147,12 @@ struct gretl_option gretl_opts[] = {
     { FUNDEBUG, OPT_N, "next", 0 },
     { FUNDEBUG, OPT_Q, "quit", 0 },
     { GARCH,    OPT_A, "arma-init", 0 },
-    { GARCH,    OPT_E, "stdresid", 0 },
     { GARCH,    OPT_F, "fcp", 0 }, 
     { GARCH,    OPT_N, "nc", 0 }, 
     { GARCH,    OPT_R, "robust", 0 },
     { GARCH,    OPT_U, "continue", 0 },
     { GARCH,    OPT_V, "verbose", 0 },
+    { GARCH,    OPT_Z, "stdresid", 0 },
     { GMM,      OPT_I, "iterate", 0 },
     { GMM,      OPT_L, "lbfgs", 0 },
     { GMM,      OPT_Q, "quiet", 0 },
